working on the image portion

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <div class="container">
         <div class="image">
-            <img src="/redwoods.jpg">      
+            <img src="/redwoods.jpg" class="redwood-img">
+            <div class="logo">
+                <div class="logo-background"></div>
+                <img src="/odin-logo.png" class="logo-img">
+            </div>
             <div class="image_text">
                 <p>Photo by <a href="https://unsplash.com/@iamthedave?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Dave Hoefler</a> on <a href="https://unsplash.com/photos/low-angle-photography-of-green-leaf-tree-rw2sFOdBszI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
             </div>
