--- a/index.html
+++ b/index.html
@@ -25,19 +25,25 @@
             <p>You know you want to.</p>
         </div>
         <div id="form">
+            <h1>Let's do this!</h1>
             <form method="get">
-                <label for="first_name">FIRST NAME</label>
-                <input type="text" id="first_name" name="first_name">
-                <label for="last_name">LAST NAME</label>
-                <input type="text" id="last_name" name="last_name">
-                <label for="email">EMAIL</label>
-                <input type="email" id="email" name="email">
-                <label for="phone">PHONE NUMBER</label>
-                <input type="text" id="phone" name="phone_number">
-                <label for="password">PASSWORD</label>
-                <input type="password" id="password" name="password">
-                <label for="confirm_password">CONFIRM PASSWORD</label>
-                <input type="password" id="confirm_password" name="confirm_password">
+                <span>
+                    <label for="first_name" class="label">FIRST NAME</label>
+                    <input type="text" id="first_name" name="first_name">
+                    <label for="email" class="label">EMAIL</label>
+                    <input type="email" id="email" name="email">
+                    <label for="password" class="label">PASSWORD</label>
+                    <input type="password" id="password" name="password">
+                </span> 
+                <span>
+                    <label for="last_name" class="label">LAST NAME</label>
+                    <input type="text" id="last_name" name="last_name">
+                    <label for="number" class="label">PHONE NUMBER</label>
+                    <input type="text" id="phone" name="phone_number">
+                    <label for="confirm_password" class="label">CONFIRM PASSWORD</label>
+                    <input type="password" id="confirm_password" name="confirm_password">
+                </span>
+                
             </form>
         </div>
     </div>
