finally aligned form properly

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
         <div id="main">
             <h1>Let's do this!</h1>
-            <div id="form">
-                <form method="get">
+            <form method="get">
+                <div id="form">
                     <div class="fields first">
                         <label for="first_name" class="label">FIRST NAME</label>
                         <input type="text" id="first_name" name="first_name">
@@ -44,8 +44,12 @@
                         <label for="confirm_password" class="label">CONFIRM PASSWORD</label>
                         <input type="password" id="confirm_password" name="confirm_password">
                     </div>
-                </form>
-            </div>
+                </div>
+            </form>
+        </div>
+        <div id="bottom">
+            <button>Create Account</button>
+            <p>Already have an account? Log in</p>
         </div>
     </div>
 
