--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div id="bottom">
             <button>Create Account</button>
-            <p>Already have an account? Log in</p>
+            <p>Already have an account? <a href="#">Log in</a></p>
         </div>
     </div>
 
