trying to fix the photo issue

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div id="left">
-        <img src="../redwoods.jpg" class="redwood-img">
+        <img src="./redwoods.jpg" class="redwood-img">
         <div id="logo">
             <div class="logo-background"></div>
-            <img src="../odin-logo.png" class="logo-img">
+            <img src="./odin-logo.png" class="logo-img">
             <p id="logo-text">ODIN</p>
         </div>
         <div id="credit">
